Wed Feb 27 14:09:25 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/Driver.pm:
          On OpenVMS all filenames are returned lower case. The dynamic loading
          of creators then fails. Addressed this by opening the creator file
          and read the first line, it normally starts with package and after
          that the package name. Thanks to Chad Elliot for this idea and
          reviewing the proposed change.

Fri Feb 22 14:49:25 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * modules/TemplateParser.pm:

          Added a new template function, <%full_path()%>, which will expand
          environment variables and resolve relative paths to absolute paths.
          Template authors should only use this when the target build system
          requires it, since it limits the MPC user's flexibility in deciding
          when and how env vars are expanded, and removes "portability" of
          generated project files (by which I mean the ability to move them
          around in a filesystem, or even move them to different machines).

        * templates/wb26.mpd:
        * templates/wb26wrproject.mpd:

          Made use of the new <%full_path()%> function.  Thanks to Johnny and
          Chad for testing and reviewing this work.  This resolves the
          enhancement request documented in bugzilla bug# 3218.

Mon Feb 11 15:21:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/README:
        * docs/USAGE:
        * modules/Driver.pm:
        * modules/Options.pm:
        * modules/ProjectCreator.pm:
        * modules/WorkspaceCreator.pm:
          Extend MPC with a -relative_file commandline argument. By default
          the default.rel file is loaded which specific which environment
          variables are expanded. With -relative_file the user can specify
          that a differnt file has to be loaded. This fixes bugzilla
          3224
