@@ -1,3 +1,9 @@
+Fri Feb 28 13:36:25 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * modules/WorkspaceCreator.pm:
+          Strip out ^ from directory and filenames on OpenVMS. Fixes bugzilla
+          3237.
+
 Wed Feb 27 14:09:25 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * modules/Driver.pm:
